--- a/README
+++ b/README
@@ -24,12 +24,12 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 == FEEDBACK ==
 
 If you encounter any unexpected behavior of the application, please report 
-the issue in the bug tracker :
- * http://github/ issue
+the issue in the bugtracker's project :
+ * http://github/flamant-bleu-studio
 
 
 == CONTACT ==
 
 Fell free to contact us using folowing project page : 
-* http://github/
+* http://github/flamant-bleu-studio
 
